# lala

./: .gitignore  README.md  improved.md  todos.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  lib.rs  logger.rs  main.rs  notifs.rs  shortcuts.rs  tray_icon.rs  utils.rs
