[package]
name = "lala"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lala_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mic-recorder = "2.0.0"
tokio = { version = "1.45.1", features = ["full"] }
tap = "1.0.1"
tauri-plugin-log = "2"
log = "0.4.27"
colored = "3.0.0"
chrono = "0.4.41"
env_logger = "0.11.8"
dirs = "6.0.0"
anyhow = "1.0.98"
iter_tools = "0.29.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
dotenvy = "0.15.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
